# upstox-rust

./: Cargo.toml  build.rs  instrucments.csv  test.http
src/: handler.rs  main.rs
