[package]
name = "upstox-rust"
version = "0.1.0"
edition = "2024"

[dependencies]
csv = "1.3.1"
futures-util = "0.3.31"
prost = "0.14.1"
reqwest = { version = "0.12", features = ["json"] }
rusqlite = "0.37.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.27", features = ["url", "native-tls", "connect"] }
tungstenite = "0.27.0"
url = "2.5.7"

[build-dependencies]
prost-build = "0.14.1"
