[package]
name = "upstox-rust"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.11.0"
chrono = { version = "0.4.42", features = ["serde"] }
csv = "1.3.1"
futures-util = "0.3.31"
prost = "0.14.1"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.145"
sqlx = { version = "0.8.6", features = ["sqlite"] }
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.27", features = [
    "url",
    "native-tls",
    "connect",
] }
tungstenite = "0.27.0"
url = "2.5.7"

[build-dependencies]
prost-build = "0.14.1"
